--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   build:
-    runs-on: [macos-latest, ubuntu-16.04, ubuntu-18.04, windows-latest]
+    strategy:
+      os: [macos-latest, ubuntu-16.04, ubuntu-18.04, windows-latest]
+    runs-on: {{matrix.os}}
     steps:
       - uses: actions/checkout@v2
       - name: setup
