--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-16.04, ubuntu-18.04, windows-latest]
-    runs-on: {{matrix.os}}
+    runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v2
       - name: setup
