--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+name: v8-cmake
+
 on:
   push:
     paths:
@@ -19,7 +21,7 @@ jobs:
       # Note: `cmake -B ${{runner.workspace}}/build` needs
       # cmake 3.13 but Ubuntu 16.04 comes with cmake 3.12.
       - name: configure
-        run: cmake ${{runner.workspace}}
+        run: cmake ${{runner.workspace}}/v8-cmake
         working-directory: ${{runner.workspace}}/build
       - name: build
         run: cmake --build ${{runner.workspace}}/build -j 2
